--- a/main.html
+++ b/main.html
@@ -19,8 +19,8 @@
 					</thead>
 					<tbody>
 						<tr>
-							<td>Column 1</td>
-							<td>Column 2</td>
+							<th>Column 1</th>
+							<th>Column 2</th>
 						</tr>
 						<tr>
 							<td>abc</td>
@@ -37,9 +37,9 @@
 					<tbody>
 						<td>
 							<ul>
-								<li>List item</li>
-								<li>List item</li>
-								<li>List item</li>
+								<li>List item 1</li>
+								<li>List item 1</li>
+								<li>List item 1</li>
 							</ul>
 						</td>
 					</tbody>
@@ -61,7 +61,7 @@
 			<td>
 				<table style="width: 100%; height: 100%" border="1">
 					<thead>
-						<th >Nested Table <4/th>
+						<th >Nested Table 4 </th>
 					</thead>
 					<tbody>
 						<td>HTML</td>
