--- a/main.html
+++ b/main.html
@@ -64,7 +64,7 @@
 						<th >Nested Table 4 </th>
 					</thead>
 					<tbody>
-						<td>HTML</td>
+						<td style="background-color:'rgba(0,0,0,0)'">HTML</td>
 					</tbody>
 				</table>
 			</td>
